@@ -1,5 +1,6 @@
 0.4
     * Add Boots + Power = sprint launch flying
+    * Add Chestplate + Infinity = god mode
 
 2012-02-10  0.3
     * Add Bow + Knockback = pierce blocks
